<resources>
    <string name="app_name">team-23-Project</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Login</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search_for_university">Search For University</string>
    <string name="already_nhave_an_naccount">Already\nhave an \nAccount?</string>
    <string name="login">Login</string>
    <string name="new_user_register_for_student">New User? Register For Student</string>
    <string name="register_for_staff">Register For Staff</string>
    <string name="num_of_attempts">Number of attempts remaining: %1$d</string>
    <string-array name="text_sizes">
        <item>16</item>
        <item>18</item>
        <item>20</item>
        <item>22</item>
        <item>24</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="app_settings_header">App Settings</string>
    <string name="accessibility_header">Accessibility</string>

    <!-- App Theme Preferences -->
    <string name="app_theme_title">App Theme</string>

    <!-- Accessibility Preferences -->
    <string name="colour_blind_title">Colour Blind Mode</string>
    <string name="attachment_title">Text Size</string>

    <string name="contactUsText">Contact us</string>
    <string name="FAQText">Frequently Asked Questions</string>
    <string name="full_name">Full Name</string>
    <string name="send">Send</string>
    <string name="enter_your_message_here">Enter your message here:</string>
    <string name="email_address">Email address</string>
    <string name="select_an_email">Select an email</string>
    <string name="subject">Subject:</string>
    <string name="faqs_and_qas"><![CDATA[FAQS and Q&As]]></string>
    <string name="register_nfor_student">Register \nFor Student</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="course">Course</string>
    <string name="stage">Stage</string>
    <string name="register_nfor_staff">Register \nFor Staff</string>
    <string name="school">School</string>
    <string name="admin">Admin</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_sign_in">Already Have an Account? Sign in</string>

    <string name="one_lower_case_letter">One lower case letter</string>
    <string name="one_upper_case_letter">One upper case letter</string>
    <string name="at_least_one_number">At least one number</string>
    <string name="at_least_8_characters">At least 8 characters</string>

    <!-- FAQs -->
    <string name="question1">Q: My University/Building doesn\'t have support, when will it?</string>
    <string name="answer1">A: Right now, we only have support for Newcastle University, we will have support for other Universities in future updates</string>
    <string name="question2">Q: Can I use the app if I\'m not a student?</string>
    <string name="answer2">A: Yes you can, however to register an account you must put in a course and stage/year</string>
    <string name="question3">Q: I can\'t see all of the rooms in my building, why not?</string>
    <string name="answer3">A: If you can\'t see a specific room, it means that room has restricted access and therefore cannot be entered to photograph it</string>


    <string-array name="emails">
        <item>test@email.com</item>
        <item>c0034793@newcastle.ac.uk</item>
        <item>bogdanNotATest@gmail.com</item>
        <item>c0080358@newcastle.ac.uk</item>
    </string-array>

    <string-array name="themes">
        <item>Light Mode</item>
        <item>Dark Mode</item>
    </string-array>

    <string name="title_activity_settings">Settings</string>
    <string name="choose_theme">Choose your theme</string>
    <string name="settings">Settings</string>
    <string name="text_size">Select text size</string>
    <string name="save">Save</string>
    <string name="feedback">Feedback</string>
    <string name="back_to_main_page">Back To Main Page</string>
    <string name="first_floor_button">First Floor Button</string>
    <string name="ground_n_floor">Ground\n Floor</string>
    <string name="entrance_button">Entrance Button</string>
    <string name="entrance">Entrance</string>
    <string name="room_g003_button">Room G003 Button</string>
    <string name="room_g_003">Room G.003</string>
    <string name="ground_floor_lifts_button">Ground Floor Lifts Button</string>
    <string name="ground_floor_lifts">Ground Floor Lifts</string>
    <string name="first_nfloor">First\nFloor</string>
    <string name="lecture_theatre_button">Lecture Theatre Button</string>
    <string name="lecture_theatre">Lecture Theatre</string>
    <string name="first_floor_corridor_button">First Floor Corridor Button</string>
    <string name="corridor">Corridor</string>
    <string name="second_floor_button">Second Floor Button</string>
    <string name="second_n_floor">Second\n Floor</string>
    <string name="second_floor_corridor_button">Second Floor Corridor Button</string>
    <string name="room_2_015_button">Room 2.015 Button</string>
    <string name="room_2_015">Room 2.015</string>
    <string name="room_2_022_button">Room 2.022 Button</string>
    <string name="room_2_022">Room 2.022</string>
    <string name="second_floor_corridor_2_button">Second Floor Corridor 2 Button</string>
    <string name="corridor_2">Corridor 2</string>
    <string name="third_floor_button">Third Floor Button</string>
    <string name="third_nfloor">Third\nFloor</string>
    <string name="third_floor_corridor_button">Third Floor Corridor Button</string>
    <string name="room_3_015_button">Room 3.015 Button</string>
    <string name="room_3_015">Room 3.015</string>
    <string name="room_3_018_button">Room 3.018 Button</string>
    <string name="room_3_018">Room 3.018</string>
    <string name="fourth_floor_button">Fourth Floor Button</string>
    <string name="fourth_n_floor">Fourth\n Floor</string>
    <string name="fourth_floor_corridor_button">Fourth Floor Corridor Button</string>
    <string name="room_4_005_button">Room 4.005 Button</string>
    <string name="room_4_005">Room 4.005</string>
    <string name="welcome">Welcome!</string>
    <string name="search_for_university_button">Search For University Button</string>
    <string name="search_for_n_university">Search For\n University</string>
    <string name="settings_button_image">Settings Button Image</string>
    <string name="settings">Settings</string>
    <string name="faqs_button_image">FAQs Button Image</string>
    <string name="faqs">FAQs</string>
    <string name="logout_button_image">Logout Button Image</string>
    <string name="logout">Logout</string>
    <string name="no_results">No Results</string>
    <string name="no_results">No Results</string>
    <string name="logo_1_image">Logo 1 Image</string>
    <string name="logo_2_image">Logo 2 Image</string>
    <string name="plus_icon_image">Plus Icon Image</string>
    <string name="logo_image">Logo Image</string>
    <string name="logo_image_register">Logo Image Register</string>
    <string name="minus_button_image">Minus Button Image</string>
</resources>