<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/app_settings_header">

        <ListPreference
            app:defaultValue="Light"
            app:entries="@array/themes"
            app:entryValues="@array/reply_values"
            app:key="Theme"
            app:title="@string/app_theme_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/accessibility_header">

        <SwitchPreferenceCompat
            app:key="colourblind"
            app:title="@string/colour_blind_title" />

        <EditTextPreference
            app:key="@string/text_size"
            app:title="@string/attachment_title" />


    </PreferenceCategory>

</PreferenceScreen>