<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/primaryTextColor"
    android:focusableInTouchMode="true"
    tools:context=".UserSettings"
    android:gravity="center"
    android:padding="4dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="650dp">

        <TextView
            android:id="@+id/settingsText"
            style="@style/viewParent.headerText.NoMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/whiteTextColor"
            tools:ignore="TextContrastCheck" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:padding="25dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="@color/whiteTextColor"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/themeSelector"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/choose_theme"
                    >

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:completionThreshold="1"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/easdasd"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/subject"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Colour Blind Mode"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/colourBlindModeSwitch"
                        android:layout_width="match_parent"
                        android:layout_height="40dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textSizeSelector"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/text_size">

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:completionThreshold="1"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/saveSettingsButton"
                    style="@style/loginButton"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="110dp"
                    android:text="@string/save" />

                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/feedbackButtonSettings"
                    style="@style/loginButton"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    android:text="@string/feedback" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>


