<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userName"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/primaryTextColor"
    android:focusableInTouchMode="true"
    android:gravity="center">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="650dp">

        <TextView
            android:id="@+id/contactUsText"
            style="@style/viewParent.headerText.NoMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:text="@string/contactUsText"
            android:textColor="@color/whiteTextColor"
            tools:ignore="TextContrastCheck" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:padding="25dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="@color/whiteTextColor"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userFullName"
                    style="@style/parent"
                    android:layout_marginTop="0dp">

                    <EditText
                        android:id="@+id/fullNameUserTxt"
                        style="@style/modifiedEditText"
                        android:backgroundTint="#FFFFFF"
                        android:hint="@string/full_name"
                        android:inputType="textPersonName"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailAdrTxt"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/registerViewsMargin">

                    <EditText
                        android:id="@+id/lastNameStudentTxt"
                        style="@style/modifiedEditText"
                        android:backgroundTint="#FFFFFF"
                        android:hint="@string/email_address"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="30dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:textSize="14sp"
                        android:hint="@string/enter_your_message_here"
                        android:inputType="textMultiLine"
                        android:lines="20"
                        android:overScrollMode="always"
                        android:scrollbarStyle="insideInset"
                        android:scrollbars="vertical"
                        android:scrollHorizontally="false" />
                </com.google.android.material.textfield.TextInputLayout>

                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/saveSendMessage"
                    style="@style/loginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:background="@drawable/button_background_blue"
                    android:text="@string/send"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    app:initialCornerAngle="27dp"
                    app:spinning_bar_color="#FFF"
                    app:spinning_bar_padding="6dp"
                    app:spinning_bar_width="4dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>

